# billiam-database

./: .gitignore  .pre-commit-config.yaml  README.md  catalog.json  dbt-commands.sh  dbt-refresh.sh  dbt_project.yml  docker-compose.yaml  graph.gpickle  graph_summary.json  manifest.json  modules.yml  packages.yml  partial_parse.msgpack  profiles.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_results.json  sqlmesh-commands.sh
.github/workflows/: deploy-dbt.yaml  run-tests.yaml  set-up-dbt.yaml  tests.yaml
billiam_database/: config.yaml  dbt_project.yml  gsheets.sql  packages.yml  profiles.yml  selectors.yml
billiam_database/macros/: __init__.py  _macros.yml  create_udfs.sql  generate_schema_name.sql  import.sql  within.py
billiam_database/macros/ci/: _macros.yml  set_ci_environment.sql
billiam_database/macros/configs/: generate_schema_name.sql
billiam_database/macros/udfs/: _macros.yml  within.sql
billiam_database/models/: _docs.md  sources.yml
billiam_database/models/bi/: daily_metrics.sql  task_details.sql
billiam_database/models/domain/calendar/: __bank_holidays.sql  calendar.sql  daylight_savings.sql
billiam_database/models/domain/career/: daily_tracker.sql  working_hours.sql
billiam_database/models/domain/finances/: credit_repayments.sql  transaction_items.sql  transactions.sql
billiam_database/models/presentation/: _docs.md  _schema.yml  daily_metrics.sql  daily_tracker.sql  pl__daily_metrics.sql  pl__daily_tracker.sql  pl__task_details.sql  pl__transactions_cube.sql  pl__working_hours.sql  task_details.sql  working_hours.sql
billiam_database/models/presentation/tests/: test__pl__daily_metrics.yml  test__pl__daily_tracker.yml  test__pl__task_details.yml
billiam_database/models/raw/: daily_tracker.sql  finances.sql  monzo_transactions.sql
billiam_database/models/seeds/: counterparty_exclusions.sql  work_absences.sql  work_hours.sql
billiam_database/models/seeds/data/: work_absences.csv  work_hours.csv
billiam_database/models/staging/: _docs.md  _schema.yml  stg__daily_tracker.sql  stg__finances.sql  stg__monzo_transactions.sql
billiam_database/models/staging/tests/: test__stg__daily_tracker.yml  test__stg__finances.yml  test__stg__monzo_transactions.yml
billiam_database/seeds/: _seeds.yml  work_absences.csv  work_hours.csv
billiam_database/tests/macros/: test__within.py
billiam_database/tests/models/bi/: test__daily_metrics.yml  test__task_details.yml
billiam_database/tests/models/domain/career/: test__daily_tracker.yml
billiam_database/tests/models/domain/finances/: test__transaction_items.yml  test__transactions.yml
billiam_database/tests/models/presentation/: test__daily_metrics.yml  test__daily_tracker.yml  test__task_details.yml
billiam_database/tests/unit-tests/staging/: stg__finances.sql
billiam_database/tests/unit/presentation/: pl__daily_metrics.sql  pl__daily_tracker.sql  pl__task_details.sql
billiam_database/tests/unit/presentation/pl__daily_metrics/: pl__daily_metrics__daily_transactions.sql  pl__daily_metrics__daily_work.sql
billiam_database/tests/unit/staging/: stg__daily_tracker.sql  stg__finances.sql  stg__monzo_transactions.sql
compiled/billiam_database/models/presentation/: pl__daily_tracker.sql
compiled/billiam_database/models/staging/: stg__daily_tracker.sql
custom_package/: __init__.py  test.py
dockerfiles/: metaduck.Dockerfile
profiler/: profiler.py
profiler/queries/: query-1.sql  query-2.sql  query-3.sql
src/macros/: _macros.yml  generate_schema_name.sql  import.sql  select_star.sql  set_ci_environment.sql
src/macros/udfs/: within.sql
src/models/: _docs.md  groups.yml  module_test_model.sql  sources.yml
src/models/presentation/: _docs.md  _schema.yml  int__task_details.sql  pl__daily_metrics.sql  pl__task_details.sql  pl__transactions_cube.sql  schema.yml
src/models/staging/: _docs.md  _schema.yml  schema.yml  stg__daily_tracker.sql  stg__finances.sql
src/seeds/: seeds.yml
src/tests/: module-test.sql
src/tests/presentation/pl__daily_metrics/: pl__daily_metrics__daily_transactions.sql
src/tests/unit-tests/presentation/: pl__task_details.sql
src/tests/unit-tests/staging/: stg__daily_tracker.sql
(+1 files in other folders)
