[project]
name = "billiam-database"
version = "0.0.0"
description = "OLAP database project for life admin."
authors = [{name = "Bilbottom"}]
readme = "README.md"
keywords = ["sql", "sqlmesh", "duckdb"]
repository = "https://github.com/Bilbottom/billiam-database"
requires-python = ">=3.11,<4.0"
dynamic = ["dependencies"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
duckdb = "^1"
python-dotenv = {extras = ["cli"], version = "^1"}
sqlmesh = "0.139.0"  # pinned because of https://github.com/TobikoData/sqlmesh/issues/3555

[tool.poetry.group]
dev.optional = false

[tool.poetry.group.dev.dependencies]
db-query-profiler = "^0.0.6"
pre-commit = "^3"
sqlmesh = {extras = ["web"], version = "*"}
