[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "billiam-database"
version = "0.0.0"
description = "OLAP database project for life admin."
authors = [{name = "Bilbottom"}]
readme = "README.md"
keywords = ["sql", "sqlmesh", "duckdb"]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "python-dotenv[cli]>=1.1.0",
    "sqlmesh>=0.171.0",
]

[dependency-groups]
dev = [
    "coverage-badge>=1.1.0",
    "db-query-profiler>=0.0.6",
    "pre-commit>=4.1.0",
    "sqlmesh[web]",
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]


[tool.setuptools.packages.find]
include = ["billiam_database"]
